main.css
body {
    background-color: #f8f8f8;
}

a {
    text-decoration: none;
    /* color: rgba(132, 133, 135, 0.7); */
    color: #5ba868;
    font-family: 'Oxygen Mono', monospace;
}

a:hover {
    color: #5ba868;
    font-size: 18px;
    text-decoration: none;
}

bold {
    color: rgb(132, 133, 135);
}

italic {
    font-style: italic;
}

p {
    font-family: 'Oxygen Mono', monospace;
    color: rgba(132, 133, 135, 0.8);
}

.home-section {
    background: url('./img/header.jpg') no-repeat center center fixed;
    background-size: cover;
    height: 100vh;
    width: 100%;
    display: flex;
    justify-content: flex-end;
}

.header-text {
    position: absolute;
    top: 45%;
    left: 42%;
    height: auto;
    color: rgba(132, 133, 135, 0.6);
    font-family: 'Poppins', sans-serif;
}

.terminal {
    font-size: 70px;
    font-weight: 700;
    text-align: left;
}

h1 {
    font-size: 60px;
    font-weight: 600;
}

.sub-text {
    font-family: 'Oxygen Mono', monospace;
    color: rgba(132, 133, 135, 0.5);
    font-size: 25px;
    margin-top: 10px;
}

nav {
    height: auto;
    width: 200px;
    margin: 40px 30px;
    position: absolute;
    right: 0;
    top: 0;
    font-family: 'Oxygen Mono', monospace;
    color: rgba(132, 133, 135, 0.7);
}

li:nth-child(2) {
    margin-top: 20px;
}

li:nth-child(3) {
    margin-top: 10px;
    
}

li:nth-child(4) {
    margin-top: 10px;
    margin-left: 25px;
}

li:nth-child(5) {
    margin-top: 7px;
    margin-left: 25px;
}

li:nth-child(6) {
    margin-top: 7px;
    margin-left: 25px;
}

li:nth-child(7) {
    margin-top: 20px;
    margin-bottom: 10px;
}

li:nth-child(8) {
    margin-top: 10px;
    margin-bottom: 20px;
}

#DevMountain {
    color: #5ba868;
}

li:nth-child(9) {
    margin-top: 10px;
}

li:nth-child(10) {
    margin-top: 10px;
}

li:nth-child(11) {
    margin-top: 10px;
    margin-bottom: 20px;
}

li:nth-child(12) {
    margin-top: 10px;
}

li:nth-child(13) {
    margin-top: 10px;
}

/* EXCEL INTERIORS WEBSITE */

img.EI {
    margin: 20px;
}

.flex {
    display: flex;
    justify-content: flex-start;
    margin-right: 200px;
    text-align: justify;
}


/* MR REACT APP */

img.MR {
    margin: 20px;
    height: auto;
}

.project-link {
    color: #5ba868;
}


/* MEDIA QUERIES */

@media (max-width: 1000px) {
    /*HOME */
    .home-section {
        position: relative;
    }
    .flexContainer {
        margin-top: 20px;
        height: 100vh;
        display: flex;
        flex-direction: column;
    }
    .header-text {
        position: relative;
        top: 0;
        left: 0;
        margin-left: 30px;
    }

    .terminal {
        font-size: 30px;
    }

    h1 {
        font-size: 30px;
    }

    .sub-text {
        display: none;
    }

    nav {
        position: relative;
        margin-top: 20px;
    }

    li:nth-child(10) {
        margin-top: 20px;
    }

    /* MR */
    .flex {
        width: 100%;
    }

}

@media (max-width: 1300px) {
    /* MR */
    .flex {
        flex-wrap: wrap;
    }

    p {
        margin-left: 20px;
        width: 825px;
    }
}

@media (max-width: 800px) {
    .flex {
        width: 100%;
    }

    p {
        font-size: 20px;
        width: 100%;
    }

    img.MR {
        margin: 20px;
        max-width: 100%;
        height: auto;
    }
}

